--- a/app/src/main/res/layout/fragment_create_product.xml
+++ b/app/src/main/res/layout/fragment_create_product.xml
@@ -90,7 +90,7 @@ android:layout_height="match_parent">
                 app:hintEnabled="false">
                 <!--  Judul Text Input-->
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/titleEt"
+                    android:id="@+id/namaEt"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="0dp"
@@ -145,18 +145,17 @@ android:layout_height="match_parent">
                 app:hintEnabled="false">
                 <!--  Nominal Text Input-->
 <!--                Placeholder yang ini harus jadi dropdown nanti -->
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/nominalEt"
+                <AutoCompleteTextView
+                    android:id="@+id/satuanEt"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingVertical="15dp"
                     android:background="@color/placeholder_box"
                     android:textColorHint="@color/placeholder_text"
                     android:hint="@string/input_placeholder_satuan"
-                    android:inputType="text"
+                    android:textSize="16sp"
                     android:paddingStart="12dp"
                     android:paddingEnd="0dp"
-                    android:textSize="16sp"
                     android:fontFamily="@font/poppins" />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -202,7 +201,7 @@ android:layout_height="match_parent">
                 app:hintEnabled="false">
                 <!--  Kategori Text Input-->
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/kategoriEt"
+                    android:id="@+id/jumlahEt"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingVertical="15dp"
@@ -252,34 +251,46 @@ android:layout_height="match_parent">
             app:layout_constraintTop_toBottomOf="@id/textView4">
 
             <!--   Fragment for Lokasi-->
-            <androidx.fragment.app.FragmentContainerView
-                android:id="@+id/autocomplete_fragment"
+<!--            <androidx.fragment.app.FragmentContainerView-->
+<!--                android:id="@+id/autocomplete_fragment"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment" />-->
+            <!--  EndOf Fragment  -->
+            <!--   Harga Satuan Text Field     -->
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment" />
-            <!--  EndOf Fragment  -->
+                app:hintEnabled="false">
+                <!-- Harga Satuan Layout -->
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/hargaSatuanEt"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingVertical="15dp"
+                    android:background="@color/placeholder_box"
+                    android:textColorHint="@color/placeholder_text"
+                    android:hint="@string/input_placeholder_harga"
+                    android:inputType="text"
+                    android:paddingStart="12dp"
+                    android:paddingEnd="0dp"
+                    android:textSize="16sp"
+                    android:fontFamily="@font/poppins"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/cardView4"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toStartOf="parent"
+                    />
+
+                <!--    EndOf Error Location Layout -->
+            </com.google.android.material.textfield.TextInputLayout>
+            <!--   EndOf Kategori Text Field     -->
 
 
 
         </com.google.android.material.card.MaterialCardView>
         <!-- EndOf Lokasi Layout   -->
-        <!-- Error Location Layout -->
-        <TextView
-            android:id="@+id/emptyLocationError"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="20dp"
-            android:fontFamily="@font/poppins"
-            android:text="@string/input_placeholder_harga"
-            android:textColor="@color/placeholder_text"
-            android:background="@color/placeholder_box"
-            android:textSize="18sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/cardView4"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            />
-        <!--    EndOf Error Location Layout -->
+
         <!--    Submit Button -->
         <com.google.android.material.button.MaterialButton
             android:id="@+id/submitButton"
@@ -288,8 +299,9 @@ android:layout_height="match_parent">
             android:layout_marginHorizontal="20dp"
             android:paddingVertical="15dp"
             android:text="@string/simpan"
+            app:backgroundTint="@color/button"
             app:cornerRadius="100dp"
-            app:layout_constraintTop_toBottomOf="@id/emptyLocationError"
+            app:layout_constraintTop_toBottomOf="@id/cardView4"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="40dp"/>
