--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,8 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray6">#FF666666</color>
 <!--    Tambah produk-->
+    <color name="border">#FFE8E8E8</color>
     <color name="placeholder_box">#FFF5F5F5</color>
     <color name="placeholder_text">#FF999999</color>
+    <color name="button">#FF033F3F</color>
 </resources>
