Missing end of layout

--- a/app/src/main/res/layout/fragment_list_transaction.xml
+++ b/app/src/main/res/layout/fragment_list_transaction.xml
@@ -49,5 +49,5 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="1" />
-</androidx.constraintlayout.widget.ConstraintLayout>
-
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
