--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
@@ -7,12 +6,24 @@
         android:title="@string/title_home" />
 
     <item
-        android:id="@+id/navigation_capture_receipt"
-        android:icon="@android:drawable/ic_menu_camera"
-        android:title="@string/title_capture_receipt" />
-    <item
         android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/ic_dashboard"
         android:title="@string/title_dashboard" />
+
+    <item
+        android:id="@+id/navigation_capture_receipt"
+        android:icon="@drawable/qr_code"
+        android:title="@string/title_scan"
+        android:enabled="true" />
+
+    <item
+        android:id="@+id/navigation_product"
+        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:title="@string/title_product" />
+
+    <item
+        android:id="@+id/navigation_profile"
+        android:icon="@drawable/ic_profile"
+        android:title="@string/title_profile" />
 
 </menu>
