--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="placeholder_box">#FFF5F5F5</color>
     <color name="placeholder_text">#FF999999</color>
     <color name="button">#FF033F3F</color>
+    <color name="green_500">#033F3F</color>
 </resources>
