--- a/app/src/main/res/drawable/dotted_line.xml
+++ b/app/src/main/res/drawable/dotted_line.xml
@@ -1,10 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <size android:height="1dp"/>
-    <solid android:color="@color/white"/>
-    <stroke
-        android:width="1dp"
-        android:color="@color/white"
-        android:dashWidth="4dp"
-        android:dashGap="2dp" />
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <item>
+        <shape>
+            <solid android:color="@color/white" />
+        </shape>
+    </item>
+
+    <item
+        android:bottom="0dp"
+        android:left="0dp"
+        android:right="0dp"
+        android:top="-6dp">
+        <shape>
+            <size android:height="5dp" />
+            <stroke
+                android:width="5dp"
+                android:color="@color/gray"
+                android:dashWidth="3dp"
+                android:dashGap="2dp" />
+        </shape>
+    </item>
+
+</layer-list>
