--- a/app/src/main/res/layout/fragment_capture_receipt.xml
+++ b/app/src/main/res/layout/fragment_capture_receipt.xml
@@ -108,7 +108,7 @@
                 android:id="@+id/confirmButtonBackground"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/rounded_button"
+                android:background="@drawable/rounded_continue_button"
                 android:contentDescription="@string/next"
                 android:scaleType="fitXY" />
 
