--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -35,9 +35,9 @@
 
     <fragment
         android:id="@+id/navigation_product"
-        android:name="com.example.culinairy.ui.capture_ocr.ProductFragment"
+        android:name="com.example.culinairy.ui.product.ProductFragment"
         android:label="@string/title_product"
-        tools:layout="@layout/fragment_create_product" />
+        tools:layout="@layout/fragment_list_product" />
 
     <fragment
         android:id="@+id/navigation_profile"
