--- a/app/src/main/res/layout/fragment_capture_receipt_result.xml
+++ b/app/src/main/res/layout/fragment_capture_receipt_result.xml
@@ -1,3 +1,4 @@
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -155,6 +156,40 @@
             android:fontFamily="@font/poppins"
             android:gravity="center"
             android:layout_gravity="center" />
-
     </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/saveButton"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="100dp"
+        android:layout_marginHorizontal="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/receiptContainer"
+        android:visibility="gone" >
+
+        <ImageView
+            android:id="@+id/saveButtonBackground"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/rounded_button"
+            android:contentDescription="@string/konfirmasi"
+            android:scaleType="fitXY" />
+
+        <TextView
+            android:id="@+id/saveButtonText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/konfirmasi"
+            android:textColor="@color/white"
+            android:textSize="17sp"
+            android:textStyle="bold"
+            android:fontFamily="@font/poppins"
+            android:gravity="center"
+            android:layout_gravity="center" />
+    </FrameLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
