--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -28,7 +28,7 @@
         android:autofillHints="Item Name"
         android:background="@drawable/input_container"
         android:fontFamily="@font/poppins"
-        android:hint="Item name"
+        android:hint="@string/item_name"
         android:textColorHint="@color/gray"
         android:inputType="text"
         android:maxLines="1"
@@ -64,7 +64,7 @@
         android:layout_height="wrap_content"
         android:textSize="14sp"
         android:fontFamily="@font/poppins"
-        android:hint="0"
+        android:hint="@string/_0"
         android:textColorHint="@color/gray"
         android:inputType="number"
         android:maxLines="1"
@@ -115,7 +115,7 @@
             android:textSize="14sp"
             android:fontFamily="@font/poppins"
             android:textAlignment="center"
-            android:hint="0"
+            android:hint="@string/_0"
             android:textColorHint="@color/gray"
             android:inputType="number"
             android:maxLines="1"
@@ -129,7 +129,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="x"
+            android:text="@string/x"
             android:layout_marginStart="3dp"
             android:textSize="14sp"
             android:fontFamily="@font/poppins"
@@ -159,7 +159,7 @@
         android:textSize="14sp"
         android:fontFamily="@font/poppins"
         android:textAlignment="textEnd"
-        android:hint="0"
+        android:hint="@string/_0"
         android:textColorHint="@color/gray"
         android:inputType="number"
         android:maxLines="1"
