feat: Create Product Fragment

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -37,7 +37,17 @@
         android:id="@+id/navigation_product"
         android:name="com.example.culinairy.ui.product.ProductFragment"
         android:label="@string/title_product"
-        tools:layout="@layout/fragment_list_product" />
+        tools:layout="@layout/fragment_list_product" >
+        <action
+            android:id="@+id/action_productFragment_to_createProductFragment"
+            app:destination="@id/navigation_create_product" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/navigation_create_product"
+        android:name="com.example.culinairy.ui.product.CreateProductFragment"
+        android:label="Create Product"
+        tools:layout="@layout/fragment_create_product" />
 
     <fragment
         android:id="@+id/navigation_profile"
