--- a/app/src/main/res/layout/fragment_capture_receipt_success.xml
+++ b/app/src/main/res/layout/fragment_capture_receipt_success.xml
@@ -12,11 +12,11 @@
         android:layout_height="wrap_content"
         android:contentDescription="@string/success"
         android:src="@drawable/save_success_logo"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/backToHomeButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.20" />
+        app:layout_constraintVertical_bias="0.40" />
 
     <TextView
         android:id="@+id/successText"
@@ -38,7 +38,7 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginTop="30dp"
-        android:layout_marginBottom="100dp"
+        android:layout_marginBottom="25dp"
         android:layout_marginHorizontal="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
