--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -131,35 +131,6 @@
 
         </com.google.android.material.card.MaterialCardView>
 
-        <CheckBox
-            android:id="@+id/checkbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/poppins"
-            android:text="@string/keep_me_logged_in"
-            android:textColor="@color/gray6"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@id/lupaPassword"
-            app:layout_constraintHorizontal_bias="0.12"
-            app:layout_constraintVertical_bias="0.03"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/cardView2"/>
-
-        <TextView
-            android:id="@+id/lupaPassword"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/lupa_password"
-            android:textColor="@color/gray6"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.7"
-            app:layout_constraintVertical_bias="0.06"
-            app:layout_constraintStart_toEndOf="@id/checkbox"
-            app:layout_constraintTop_toBottomOf="@id/cardView2"/>
-
         <com.google.android.material.button.MaterialButton
             android:id="@+id/loginButton"
             android:layout_width="match_parent"
@@ -169,7 +140,7 @@
             android:text="@string/masuk"
             android:backgroundTint="@color/button"
             app:cornerRadius="10dp"
-            app:layout_constraintTop_toBottomOf="@id/checkbox"
+            app:layout_constraintTop_toBottomOf="@id/cardView2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="15dp"/>
