feat: add email and pass validation

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="button">#FF033F3F</color>
     <color name="green_500">#033F3F</color>
     <color name="red">#EB5757</color>
+    <color name="blue">#89CFF0</color>
 </resources>
