--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -18,29 +18,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/itemTextEdit"
+    <Spinner
+        android:id="@+id/itemEdit"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="25dp"
         android:layout_marginTop="20dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
-        android:autofillHints="Item Name"
-        android:background="@drawable/input_container"
-        android:fontFamily="@font/poppins"
-        android:hint="@string/item_name"
-        android:textColorHint="@color/gray"
-        android:inputType="text"
-        android:maxLines="1"
-        android:paddingHorizontal="5dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:paddingVertical="0dp"
-        android:textColor="@color/black"
-        android:textSize="14sp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:visibility="gone" />
+        android:background="@drawable/spinner_input_container"
+    />
 
     <TextView
         android:id="@+id/priceText"
@@ -58,30 +48,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <EditText
-        android:id="@+id/priceTextEdit"
-        android:layout_width="120dp"
-        android:layout_height="wrap_content"
-        android:textSize="14sp"
-        android:fontFamily="@font/poppins"
-        android:hint="@string/_0"
-        android:textColorHint="@color/gray"
-        android:inputType="number"
-        android:maxLines="1"
-        android:autofillHints="Price"
-        android:background="@drawable/input_container"
-        android:paddingHorizontal="5dp"
-        android:paddingVertical="0dp"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:layout_marginBottom="20dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="5dp"
-        app:layout_constraintTop_toBottomOf="@id/itemTextEdit"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:visibility="gone" />
-
     <TextView
         android:id="@+id/quantityText"
         android:layout_width="wrap_content"
@@ -93,9 +59,9 @@
         android:textColor="@color/black"
         android:layout_marginBottom="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/totalPriceText"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintHorizontal_bias="0.60"
-        app:layout_constraintStart_toEndOf="@+id/priceText" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <LinearLayout
         android:id="@+id/quantityTextEditContainer"
@@ -103,10 +69,9 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/totalPriceTextEdit"
-        app:layout_constraintHorizontal_bias="0.85"
-        app:layout_constraintStart_toEndOf="@+id/priceTextEdit"
-        android:visibility="gone" >
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.58"
+        app:layout_constraintStart_toStartOf="parent" >
 
         <EditText
             android:id="@+id/quantityTextEdit"
@@ -151,29 +116,6 @@
         android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
-
-    <EditText
-        android:id="@+id/totalPriceTextEdit"
-        android:layout_width="130dp"
-        android:layout_height="wrap_content"
-        android:textSize="14sp"
-        android:fontFamily="@font/poppins"
-        android:textAlignment="textEnd"
-        android:hint="@string/_0"
-        android:textColorHint="@color/gray"
-        android:inputType="number"
-        android:maxLines="1"
-        android:autofillHints="Total Price"
-        android:background="@drawable/input_container"
-        android:paddingHorizontal="5dp"
-        android:paddingVertical="0dp"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:layout_marginBottom="20dp"
-        android:layout_marginEnd="15dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:visibility="gone" />
 
     <View
         android:id="@+id/dottedLine"
